<resources>
    <string name="app_name">4176_Project</string>
    <string name="Login_welcome">Welcome !</string>
    <string name="Login">Log in</string>
    <string name="Signup">Sign up</string>
    <string name="forget">Forgot Password ?</string>
    <string name="do_not_have_account">Do not have an account ?</string>
    <string name="name">Username:</string>
    <string name="pass">Password:</string>
    <string name="repet">Repeat your password:</string>
    <string name="email">Email:</string>
    <string name="dateOfBirth">Date of birth:</string>
    <string name="checkbox_TEXT">I have read and agree to </string>
    <string name="checkbox_link">Terms and Conditions</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_Login">Login</string>
    <string name="run_distance">Enter distance</string>
    <string name="run_return">Return to origin</string>
    <string name="setup">Workout</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
